--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,11 @@ body{
     color: #EBFAFD
 }
 
+.days-list span:nth-of-type(2){
+    margin-top: 2px;
+    font-size: 0.8rem;
+}
+
 .days-list li .bx{
     margin-bottom: 5px;
     font-size: 2rem;
